syntax = "proto3";

package templates;

//import "google/protobuf/empty.proto"; 
import "google/protobuf/any.proto";
 
service Templates{
 rpc TemplateGet(TemplateGetRequest) returns (TemplateGetResponse) {}
 rpc TemplateList(TemplateListRequest) returns (TemplateListResponse) {}
 rpc TemplateDelete(TemplateDeleteRequest) returns (TemplateDeleteResponse) {}
 rpc TemplateUpdate(TemplateUpdateRequest) returns (TemplateUpdateResponse) {}
 rpc TemplateFromDesktop(TemplateFromDesktopRequest) returns (TemplateFromDesktopResponse) {}
 
 rpc BaseGet(BaseGetRequest) returns (BaseGetResponse) {}
 rpc BaseList(BaseListRequest) returns (BaseListResponse) {}
}

message HardwareNew{
 int32 vcpus=1;
 int32 memory=2;
 string boot_disk_rpath=3;
 string boot_disk_bus=4;
 int32  boot_disk_size=5; 
 repeated string videos=6;
 repeated string graphics=7;
 repeated string boots=8;
 repeated string interfaces=9;
 repeated string isos=10;
 repeated string floppies=11;
}

message HardwareDerived{
 int32 vcpus=1;
 int32 memory=2;
 string boot_disk_rpath=3;
 string boot_disk_bus=4; 
 repeated string videos=5;
 repeated string graphics=6;
 repeated string boots=7;
 repeated string interfaces=8;
 repeated string isos=9;
 repeated string floppies=10;
}

message HardwareUpdate{
 int32 vcpus=1;
 int32 memory=2;
 string boot_disk_bus=7; 
 repeated string videos=3;
 repeated string graphics=4;
 repeated string boots=5;
 repeated string interfaces=6;
 repeated string isos=8;
 repeated string floppies=9;
}
    
message Viewer{
 string hostname=1;
 string hostname_external=2;
 int32 port_spice=5;
 int32 port_spice_ssl=6;
 int32 port_vnc=7;
 int32 port_vnc_websocket=8;
 string passwd=9;
 string client_addr=10;
 float client_since=11;
}
    

    // TEMPLATE //

message TemplateGetRequest{
 string template_id=1;
}

message TemplateGetResponse{
  repeated google.protobuf.Any template = 1;
}

message TemplateListRequest{}

message TemplateListResponse{
 repeated string templates = 1;
}

message TemplateDeleteRequest{
 string template_id = 1;
}

message TemplateDeleteResponse{
    enum State{
     DELETED = 0;
     FAILED = 1;
     UNKNOWN = 2;
    }
 State state = 1;
 string detail = 2;
}

message TemplateUpdateRequest{
 string template_id=1;
 HardwareUpdate hardware=2;
}

message TemplateUpdateResponse{
    enum State{
     STOPPED= 0;
     FAILED = 1;
     UNKNOWN = 2;
    }
 State state = 1;
 string detail = 2;
}

message TemplateFromDesktopRequest{
 string desktop_id=1;
 string template_id=2;
 HardwareDerived hardware=3;
 repeated string next_actions = 4;
}

message TemplateFromDesktopResponse{
    enum State{
     STOPPED= 0;
     FAILED = 1;
     UNKNOWN = 2;
    }
 State state = 1;
 string detail = 2;
}


    // BASE //

message BaseGetRequest{
 string base_id=1;
}

message BaseGetResponse{
  repeated google.protobuf.Any base = 1;
}

message BaseListRequest{}

message BaseListResponse{
 repeated string bases=1;
}

